@@ -1,3 +1,6 @@
+2011-11-25
+ * added daemon's --autorestart parameter
+
 2011-11-04
  * close_for command for dome
 
